testing conection filebeat

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   oncall-web:
     build: .
     hostname: oncall
+    labels:
+      - co.elastic.logs/enabled=true
     ports:
       - "8080:8080"
       - "8001:8001"
@@ -61,6 +63,8 @@ services:
   oncall-mysql:
     hostname: oncall-mysql
     image: mysql:5.7
+    labels:
+      - co.elastic.logs/enabled=true
     environment:
       - MYSQL_ROOT_PASSWORD=1234
     networks:
@@ -96,6 +100,8 @@ services:
     image: logstash:7.16.2
     volumes:
       - ./configs/logstash/config.yml:/usr/share/logstash/config/logstash.yml
+      - ./configs/logstash/pipelines.yml:/usr/share/logstash/config/pipelines.yml
+      - ./configs/logstash/pipelines:/usr/share/logstash/config/pipelines
     environment:
       LS_JAVA_OPTS: "-Xmx512m -Xms512m"
     ports:
