--- a/configs/logstash/pipelines/service_stamped_json_logs.conf
+++ b/configs/logstash/pipelines/service_stamped_json_logs.conf
@@ -7,6 +7,8 @@ output  {
   elasticsearch {
     hosts => ["elasticsearch:9200"]
     index => "logstash-oncall-%{+yyyy.MM.dd}"
+    user => "elastic"
+    password => "MyPw123"
   }
   if [container][image][name] =~ /mysql/ {
   stdout {
