--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,7 +123,21 @@ services:
       - elk
     ports:
       - "5601:5601"
-      
+    
+  beats:
+    image: elastic/filebeat:7.16.2
+    container_name: filebeat
+    labels:
+      - co.elastic.logs/enabled=false
+    volumes:
+      - ./configs/filebeat/config.yml:/usr/share/filebeat/filebeat.yaml:ro
+      - ./var/run/docker.sock:/var/run/docker.sock:ro
+      - ./var/lib/docker/containers:/var/lib/docker/containers:ro  
+    networks:
+      - elk
+    depends_on:
+      - logstash
+
 networks:
   iris:
   elk:
