finish config ELK

--- a/configs/logstash/pipelines/service_stamped_json_logs.conf
+++ b/configs/logstash/pipelines/service_stamped_json_logs.conf
@@ -6,13 +6,12 @@ input {
 output  {
   elasticsearch {
     hosts => ["elasticsearch:9200"]
-    index => "logstash-oncall-%{+yyyy.MM.dd}"
     user => "elastic"
     password => "MyPw123"
   }
-  if [container][image][name] =~ /mysql/ {
+  # if [container][image][name] =~ /mysql/ {
   stdout {
     codec => rubydebug
   }
-}
+# }
 }
