--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,14 +125,15 @@ services:
       - "5601:5601"
     
   beats:
+    user: root
     image: elastic/filebeat:7.16.2
     container_name: filebeat
     labels:
       - co.elastic.logs/enabled=false
     volumes:
-      - ./configs/filebeat/config.yml:/usr/share/filebeat/filebeat.yaml:ro
-      - ./var/run/docker.sock:/var/run/docker.sock:ro
-      - ./var/lib/docker/containers:/var/lib/docker/containers:ro  
+      - ./configs/filebeat/config.yml:/usr/share/filebeat/filebeat.yml:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro  
     networks:
       - elk
     depends_on:
