--- a/configs/prometheus.yml
+++ b/configs/prometheus.yml
@@ -7,12 +7,13 @@ global:
 # Alertmanager configuration
 alerting:
   alertmanagers:
-    - static_configs:
-        - targets:
-          # - alertmanager:9093
-
-# Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
+  - scheme: http
+    static_configs:
+    - targets:
+      - "alertmanager:9093"
+  # Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
 rule_files:
+  - 'alert.rules'
   # - "first_rules.yml"
   # - "second_rules.yml"
 
