--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,6 @@ services:
     hostname: oncall
     labels:
       - co.elastic.logs/enabled=true
-    ports:
-      - "8080"
-      - "8001:8001"
     environment:
       - DOCKER_DB_BOOTSTRAP=1
       - IRIS_API_HOST=iris
@@ -16,28 +13,15 @@ services:
       - ./configs/config.docker.yaml:/home/oncall/config/config.yaml
     networks:
       - iris
-
-  oncall-web-2:
-    build: .
-    hostname: oncall2
-    ports:
-      - "8080"
-      - "8002:8001"
-    environment:
-      - DOCKER_DB_BOOTSTRAP=1
-      - IRIS_API_HOST=iris
-    volumes:
-      - ./configs/config.docker.yaml:/home/oncall/config/config.yaml
-    networks:
-      - iris
-
+    deploy:
+      replicas: 2
 
   nginx:
     image: nginx:latest
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
     depends_on:
-      - oncall-web
+      - oncall-web  
     ports:
       - "8080:8080"
     networks:
@@ -110,46 +94,46 @@ services:
     networks:
       - iris
 
-  alertmanager-bot:
-    command:
-      - --alertmanager.url=http://alertmanager:9093
-      - --log.level=info
-      - --store=bolt
-      - --listen.addr=0.0.0.0:9097
-      - --bolt.path=/data/bot.db
-      - --telegram.admin=975029829
-      - --telegram.token=6882705236:AAHTMe5jfqE-ScJCdhWTIYIDoHj06cLgVKw
-    image: metalmatze/alertmanager-bot:0.4.3
-    user: root
-    ports:
-      - 9097:9097
-    container_name: alertmanager-bot
-    hostname: alertmanager-bot
-    environment:
-      TZ: "Europe/Moscow"
-    restart: unless-stopped
-    volumes:
-      - ./data:/data
-    networks:
-      - iris
-
-  alertmanager:
-    image: prom/alertmanager:v0.21.0
-    user: root
-    ports:
-      - 9093:9093
-    volumes:
-      - ./configs/alertmanager/:/etc/alertmanager/
-    container_name: alertmanager
-    hostname: alertmanager
-    environment:
-      TZ: "Europe/Moscow"
-    restart: unless-stopped
-    command:
-      - '--config.file=/etc/alertmanager/alertmanager.yml'
-      - '--storage.path=/etc/alertmanager/data'
-    networks:
-      - iris
+  # alertmanager-bot:
+  #   command:
+  #     - --alertmanager.url=http://alertmanager:9093
+  #     - --log.level=info
+  #     - --store=bolt
+  #     - --listen.addr=0.0.0.0:9097
+  #     - --bolt.path=/data/bot.db
+  #     - --telegram.admin=975029829
+  #     - --telegram.token=6882705236:AAHTMe5jfqE-ScJCdhWTIYIDoHj06cLgVKw
+  #   image: metalmatze/alertmanager-bot:0.4.3
+  #   user: root
+  #   ports:
+  #     - 9097:9097
+  #   container_name: alertmanager-bot
+  #   hostname: alertmanager-bot
+  #   environment:
+  #     TZ: "Europe/Moscow"
+  #   restart: unless-stopped
+  #   volumes:
+  #     - ./data:/data
+  #   networks:
+  #     - iris
+  #
+  # alertmanager:
+  #   image: prom/alertmanager:v0.21.0
+  #   user: root
+  #   ports:
+  #     - 9093:9093
+  #   volumes:
+  #     - ./configs/alertmanager/:/etc/alertmanager/
+  #   container_name: alertmanager
+  #   hostname: alertmanager
+  #   environment:
+  #     TZ: "Europe/Moscow"
+  #   restart: unless-stopped
+  #   command:
+  #     - '--config.file=/etc/alertmanager/alertmanager.yml'
+  #     - '--storage.path=/etc/alertmanager/data'
+  #   networks:
+  #     - iris
   
   elasticsearch:
     image: elasticsearch:7.16.1
