--- a/nginx.conf
+++ b/nginx.conf
@@ -6,8 +6,8 @@ events {
 
 http{
 upstream oncall {
-        server oncall:8080;
-        server oncall2:8080;
+        server my-oncall-project_oncall-web_1:8080;
+        server my-oncall-project_oncall-web_2:8080;
     }
 server {
     listen 8080;
@@ -16,6 +16,7 @@ server {
         proxy_pass http://oncall;
         proxy_set_header        X-Real-IP       $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
     }
 }
 }
