add ningx in dc

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,6 +69,15 @@ services:
     networks:
         - iris
 
+  prometheus_nginx:                                                                                                   
+    image: nginx/nginx-prometheus-exporter:1.0.0                                                                      
+    ports:                                                                                                            
+    - "9113:9113"                                                                                                     
+    command:                                                                                                          
+    - --nginx.scrape-uri=http://158.160.122.18:8080/stub_status
+    networks:
+        - iris
+
 
   oncall-mysql:
     hostname: oncall-mysql
@@ -135,66 +144,66 @@ services:
   #   networks:
   #     - iris
   
-  elasticsearch:
-    image: elasticsearch:7.16.1
-    volumes:
-      - ./configs/elasticsearch/config.yml:/usr/share/elasticsearch/config/elasticsearch.yml
-      - ./docker_volumes/elasticsearch/data:/var/lib/elasticsearch/data
-    environment:
-      ES_JAVA_OPTS: "-Xmx512m -Xms512m"
-      ELASTIC_USERNAME: "elastic"
-      ELASTIC_PASSWORD: "MyPw123"
-      discovery.type: single-node
-    networks:
-      - elk
-    ports:
-      - "9200:9200"
-      - "9300:9300"
-
-  logstash:
-    image: logstash:7.16.2
-    volumes:
-      - ./configs/logstash/config.yml:/usr/share/logstash/config/logstash.yml
-      - ./configs/logstash/pipelines.yml:/usr/share/logstash/config/pipelines.yml
-      - ./configs/logstash/pipelines:/usr/share/logstash/config/pipelines
-    environment:
-      LS_JAVA_OPTS: "-Xmx512m -Xms512m"
-    ports:
-      - "5044:5044"
-      - "5000:5000"
-      - "9600:9600"
-    networks:
-      - elk
-    depends_on:
-      - elasticsearch
-
-  kibana:
-    image: kibana:7.16.1
-    depends_on:
-      - elasticsearch
-    volumes:
-      - ./configs/kibana/config.yml:/usr/share/kibana/config/kibana.yml
-    networks:
-      - elk
-    ports:
-      - "5601:5601"
-    
-  beats:
-    user: root
-    image: elastic/filebeat:7.16.2
-    container_name: filebeat
-    labels:
-      - co.elastic.logs/enabled=false
-    volumes:
-      - ./configs/filebeat/config.yml:/usr/share/filebeat/filebeat.yml:ro
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-      - /var/lib/docker/containers:/var/lib/docker/containers:ro  
-    networks:
-      - elk
-    depends_on:
-      - logstash
+  # elasticsearch:
+  #   image: elasticsearch:7.16.1
+  #   volumes:
+  #     - ./configs/elasticsearch/config.yml:/usr/share/elasticsearch/config/elasticsearch.yml
+  #     - ./docker_volumes/elasticsearch/data:/var/lib/elasticsearch/data
+  #   environment:
+  #     ES_JAVA_OPTS: "-Xmx512m -Xms512m"
+  #     ELASTIC_USERNAME: "elastic"
+  #     ELASTIC_PASSWORD: "MyPw123"
+  #     discovery.type: single-node
+  #   networks:
+  #     - elk
+  #   ports:
+  #     - "9200:9200"
+  #     - "9300:9300"
+  #
+  # logstash:
+  #   image: logstash:7.16.2
+  #   volumes:
+  #     - ./configs/logstash/config.yml:/usr/share/logstash/config/logstash.yml
+  #     - ./configs/logstash/pipelines.yml:/usr/share/logstash/config/pipelines.yml
+  #     - ./configs/logstash/pipelines:/usr/share/logstash/config/pipelines
+  #   environment:
+  #     LS_JAVA_OPTS: "-Xmx512m -Xms512m"
+  #   ports:
+  #     - "5044:5044"
+  #     - "5000:5000"
+  #     - "9600:9600"
+  #   networks:
+  #     - elk
+  #   depends_on:
+  #     - elasticsearch
+  #
+  # kibana:
+  #   image: kibana:7.16.1
+  #   depends_on:
+  #     - elasticsearch
+  #   volumes:
+  #     - ./configs/kibana/config.yml:/usr/share/kibana/config/kibana.yml
+  #   networks:
+  #     - elk
+  #   ports:
+  #     - "5601:5601"
+  #   
+  # beats:
+  #   user: root
+  #   image: elastic/filebeat:7.16.2
+  #   container_name: filebeat
+  #   labels:
+  #     - co.elastic.logs/enabled=false
+  #   volumes:
+  #     - ./configs/filebeat/config.yml:/usr/share/filebeat/filebeat.yml:ro
+  #     - /var/run/docker.sock:/var/run/docker.sock:ro
+  #     - /var/lib/docker/containers:/var/lib/docker/containers:ro  
+  #   networks:
+  #     - elk
+  #   depends_on:
+  #     - logstash
 
 networks:
   iris:
-  elk:
-    driver: bridge
+  # elk:
+  #   driver: bridge
