--- a/configs/prometheus.yml
+++ b/configs/prometheus.yml
@@ -42,10 +42,10 @@ scrape_configs:
     static_configs:
       - targets: ['node_exporter:9100']
 
-  - job_name: 'nginx_exporter'
+  - job_name: 'telegraf'
     scrape_interval: 5s
     static_configs:
-      - targets: ['prometheus_nginx:9113']
+      - targets: ['telegraf:8125']
 
   - job_name: 'my_exporter'
     scrape_interval: 30s
