--- a/nginx.conf
+++ b/nginx.conf
@@ -18,5 +18,10 @@ server {
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
     }
+    location /nginx_status {
+         stub_status;
+         # allow 127.0.0.1;
+         # deny all;
+    }
 }
 }
