--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,47 @@
 version: '3'
 
 services:
-  oncall-web:
-    build: .
-    hostname: oncall
-    labels:
-      - co.elastic.logs/enabled=true
-    environment:
-      - DOCKER_DB_BOOTSTRAP=1
-      - IRIS_API_HOST=iris
-    volumes:
-      - ./configs/config.docker.yaml:/home/oncall/config/config.yaml
-    networks:
-      - iris
-    deploy:
-      replicas: 2
-
   nginx:
     image: nginx:latest
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
     depends_on:
-      - oncall-web  
+      - oncall-principal
+      - oncall-support
     ports:
       - "8080:8080"
     networks:
         - iris
- 
+
+  oncall-principal:
+    build: .
+    hostname: oncall-principal
+    ports:
+      - "8081:8080"
+    environment:
+      - DOCKER_DB_BOOTSTRAP=1
+      - IRIS_API_HOST=iris
+    volumes:
+      - ./configs/config.docker.yaml:/home/oncall/config/config.yaml
+      - logs:/home/oncall/var/log/uwsgi
+    networks:
+      - iris
+
+  oncall-support:
+    build: .
+    hostname: oncall-support
+    ports:
+      - "8082:8080"
+    environment:
+      - DOCKER_DB_BOOTSTRAP=1
+      - IRIS_API_HOST=iris
+    volumes:
+      - ./configs/config.docker.yaml:/home/oncall/config/config.yaml
+      - logs:/home/oncall/var/log/uwsgi
+    networks:
+      - iris
+
+
   blackbox-exporter:
     image: quay.io/prometheus/blackbox-exporter:latest
     ports:
@@ -215,6 +230,9 @@ services:
   #     - elk
   #   depends_on:
   #     - logstash
+
+volumes:
+  logs:
 
 networks:
   iris:
