new conf to manual instances

--- a/nginx.conf
+++ b/nginx.conf
@@ -6,8 +6,8 @@ events {
 
 http{
 upstream oncall {
-        server my-oncall-project_oncall-web_1:8080;
-        server my-oncall-project_oncall-web_2:8080;
+        server oncall-principal:8080;
+        server oncall-support:8080;
     }
 server {
     listen 8080;
